feat: update implement stock sync service to version 3